<resources>
    <string name="app_name">FatToFabApp</string>
    <string name="action_settings">Favorites</string>
    <string name="enterheight">Enter Height (m) :</string>
    <string name="enterweight">Enter Weight (kg) :</string>
    <string name="button">Ready!</string>
    <string name="text">Enter to get started!</string>
    <string name="fabButton">This Button will lead you to Exercise and Food Section.</string>
    <string name="enterhip">Enter Hip Circumference (cm) :</string>
    <string name="genderText">Choose your Gender:</string>
    <string name="AgeText">Choose Age:</string>
    <string name="underweight">You are Underweight! So you need to Increase your Fat Amount.</string>
    <string name="healthy">You are Healthy! Stay Healthy and Fab!</string>
    <string name="overweight">You are Overweight! Keep up with us to get Fab!</string>
    <string name="obese">You are Obese! Be Quick to check out our Sections!</string>
    <string name="dialogtitle">Check Out!</string>
    <string name="title_activity_exercises">Exercises</string>
    <string name="title_activity_foods">Foods</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="text_exercisesList">List of Exercises.</string>
    <string name="empty_list_server_error">List is empty due to error in server.</string>
    <string name="textSymbol">This gives us the list of exercises.</string>
    <string-array name="Age">
        <item>20-39</item>
        <item>40-59</item>
        <item>60-79</item>
    </string-array>
</resources>
