<ScrollView android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/relativeLayout"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:text="@string/text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/textHeading" />

    <TextView
        android:layout_marginTop="@dimen/topGap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genderText"
        android:text="@string/genderText"
        android:textColor="@color/black"
        android:textSize="@dimen/textInput"
        android:layout_below="@+id/textView"/>

    <TextView
        android:layout_marginTop="@dimen/marginTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textAge"
        android:text="@string/AgeText"
        android:textColor="@color/black"
        android:textSize="@dimen/textInput"
        android:paddingRight="@dimen/fab_margin"
        android:layout_below="@+id/genderText"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/genderText"
        android:layout_toRightOf="@+id/textAge"
        android:contextClickable="true"
        android:textColor="@color/black"
        android:scrollbarSize="@dimen/fab_margin"
        android:entries="@array/Age">

    </Spinner>
    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:layout_marginRight="@dimen/marginBottom"
        android:inputType="numberDecimal"
        android:layout_below="@+id/spinner"
        android:layout_toRightOf="@+id/textView1"/>

    <EditText
        android:layout_width="50dp"
        android:layout_below="@+id/editText1"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:inputType="numberDecimal"
        android:layout_toRightOf="@+id/textView2"/>

    <EditText
        android:layout_width="50dp"
        android:layout_below="@+id/editText2"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:inputType="numberDecimal"
        android:layout_toRightOf="@+id/textView3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterheight"
        android:textSize="@dimen/textInput"
        android:paddingTop="@dimen/paddingTop"
        android:textColor="@color/black"
        android:layout_below="@+id/spinner"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/textView1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterweight"
        android:paddingRight="@dimen/paddingRight"
        android:textSize="@dimen/textInput"
        android:layout_below="@+id/textView1"
        android:textColor="@color/black"
        android:paddingTop="@dimen/paddingTop"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterhip"
        android:paddingRight="@dimen/paddingRight"
        android:textSize="@dimen/textInput"
        android:layout_below="@+id/textView2"
        android:paddingTop="@dimen/paddingTop"
        android:textColor="@color/black"
        android:id="@+id/textView3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:id="@+id/button"
        android:onClick="onButtonClick"
        android:shadowColor="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark"
        android:elevation="@dimen/fabElevation"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:textColor="@color/black"
        android:textSize="@dimen/textInput"
        android:id="@+id/resultTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@+id/resultTextView"
        android:textSize="@dimen/textInput"
        android:id="@+id/resultTextVieww" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_below="@+id/textView"
        android:orientation="horizontal"
        android:layout_toRightOf="@+id/genderText">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:textColor="@color/black"
            android:id="@+id/radioButton1"
            android:layout_toRightOf="@+id/genderText"
            android:layout_below="@+id/textView"
            android:onClick="onRadioButtonClick"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:textColor="@color/black"
            android:id="@+id/radioButton2"
            android:layout_toRightOf="@+id/radioButton1"
            android:layout_below="@id/textView"
            android:onClick="onRadioButtonClick"/>

    </RadioGroup>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/resultTextVieww"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>

</ScrollView>